[tool.poetry]
name = "align-twilio"
version = "0.0.1"
description = "SMS API"
authors = ["cakraocha@gmail.com"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "~0.17.5"
gunicorn = "20.1.0"
fastapi = "~0.74.1"
pydantic = "~1.9.0"
twilio = "*"

[tool.poetry.dev-dependencies]
ipython = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
